--- a/calculator/index.html
+++ b/calculator/index.html
@@ -6,19 +6,23 @@
         <link rel="stylesheet" href="./style.css">
         <title>Calculator</title>
     </head>
-    <body style="background-image: url(./assets/background-wave-minimalist-modern-style_483537-5220.avif); background-size: cover;">
-        <!-- <p class="test">simple calculator</p> -->
-        <!-- <img src="./assets/img-test.webp" alt="here"> -->
-        <!-- <a href="https://fast.com/fr/">test</a> -->
-        <table class="this">
-        <tr>
-            <th ></th>
-            <th ></th>
-            <th ></th>
-            <th ></th>
-            <th ></th>
-        </tr>
-        </table>
+    <body >
+        <div class=".alignement">
+            <table>
+                <tr>
+                    <th >here</th>
+                    <th >here</th>
+                    <th >here</th>
+                    <th >here</th>
+                </tr>
+                <tr>
+                    <td >here</td>
+                    <td >here</td>
+                    <td >here</td> 
+                    <td >here</td>
+                </tr>
+            </table>
+        </div>
         <script src="./index.js"></script>
         <noscript>Sorry, your browser does not support JavaScript!</noscript>
     </body>
